--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,6 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Threads REQUIRED)
-
 set(SRC
 	"${PROJECT_SOURCE_DIR}/logrotate.cpp"
 	"${PROJECT_SOURCE_DIR}/logrotate.hpp"
@@ -23,8 +21,7 @@ add_executable(${PROJECT_NAME} ${SRC})
 
 target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Werror -Wextra -pedantic)
 
-target_link_libraries(${PROJECT_NAME}
-${CMAKE_THREAD_LIBS_INIT}
-)
+#target_link_libraries(${PROJECT_NAME}
+#)
 
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
